Fix DJ name color - was invisible (blue on blue background)
Change .dj-name color from $eist to $eist-secondary so the artist
name is visible in the player bar.

--- a/assets/scss/_player.scss
+++ b/assets/scss/_player.scss
@@ -101,7 +101,7 @@
 
     .dj-name {
         font-weight: 700;
-        color: $eist;
+        color: $eist-secondary;
     }
 }
 
